src/objects/GDMFSL_Profit_Center__c/GDMFSL_Profit_Center__c.object-meta.xml
<CustomObject>
    <label>Profit Center</label>
    <nameField>
        <label>Profit Center #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profit Centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>