src/objects/GDMFSL_Profit_Center__c/fields/GDMFSL_Discipline__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Discipline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discipline</label>
    <referenceTo>GDMFSL_Discipline__c</referenceTo>
    <relationshipLabel>Profit Centers</relationshipLabel>
    <relationshipName>Profit_Centers</relationshipName>
    <type>Lookup</type>
</CustomField>