src/objects/GDMFSL_Profit_Center__c/fields/GDMFSL_Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Sales_Organization__c</fullName>
    <label>Sales Organization</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>