src/objects/GDMFSL_Profit_Center__c/fields/GDMFSL_Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Profit Centers</relationshipLabel>
    <relationshipName>Profit_Centers</relationshipName>
    <type>Lookup</type>
</CustomField>